--- a/html/Memories.html
+++ b/html/Memories.html
@@ -119,7 +119,7 @@
                 
               </div>
               <div class="ly-imgbox22">
-                <img class="ly-img22" src="img/di24.jpg">
+<!--                 <img class="ly-img22" src="img/di24.jpg"> -->
               </div>
           </div>
           <div class="ly-triangle22"></div>
@@ -134,7 +134,7 @@
               </div>
               
                 <div class="ly-imgbox23"  style="height: 70%">
-                    <img class="ly-img23" src="../img/di24.jpg"  style="height: 100%">
+                    <img class="ly-img23" src="../img/ff.jpg"  style="height: 100%">
               </div>
           </div>
           <div class="ly-triangle23"></div>
